--- a/app/src/main/res/layout/fragment_forgotten_password.xml
+++ b/app/src/main/res/layout/fragment_forgotten_password.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgottenPasswordFragment">
+    tools:context=".ui.authentication.forgot_password.ForgottenPasswordFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
