--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -19,7 +19,9 @@
             android:layout_marginTop="58dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/appNameTxt"
+            />
 
         <TextView
             android:id="@+id/appNameTxt"
@@ -31,6 +33,7 @@
             android:textColor="#252A34"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/emailInputLayout"
             app:layout_constraintTop_toBottomOf="@+id/logoImage"
 
             />
@@ -44,6 +47,7 @@
             android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
             app:layout_constraintTop_toBottomOf="@+id/appNameTxt">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -66,6 +70,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
+            app:layout_constraintBottom_toTopOf="@+id/forgottenPsswTxt"
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -87,6 +92,8 @@
             android:textColor="#252A34"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/loginButton"
 
             />
 
@@ -104,6 +111,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/forgottenPsswTxt"
+            app:layout_constraintBottom_toTopOf="@+id/orTxt"
 
             />
 
@@ -118,6 +126,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loginButton"
+            app:layout_constraintBottom_toTopOf="@+id/accountTxt"
 
             />
 
@@ -127,10 +136,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="64dp"
             android:layout_marginBottom="16dp"
+            android:layout_marginTop="96dp"
             android:text="Ainda não tem uma conta?"
             android:textColor="#252A34"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/orTxt"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
 
             />
 
@@ -142,8 +154,11 @@
             android:layout_marginBottom="16dp"
             android:text="Cadastre-se"
             android:textColor="#FF2E63"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/orTxt"
             app:layout_constraintStart_toEndOf="@+id/accountTxt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="96dp"
 
             />
 
