--- a/app/src/main/res/layout/fragment_second_register.xml
+++ b/app/src/main/res/layout/fragment_second_register.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background"
-    tools:context=".ui.authentication.register.RegisterFragment">
+    tools:context=".ui.authentication.register.SecondRegisterFragment">
 
     <TextView
-        android:id="@+id/registrationTxt"
+        android:id="@+id/secondRegistrationTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="89dp"
@@ -20,78 +20,58 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/nameEdTxt"/>
-
-    <EditText
-        android:id="@+id/nameEdTxt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="32dp"
-        android:hint="@string/name_register_edTxt"
-        android:textSize="16sp"
-        android:theme="@style/TextAppearance.App.TextInputLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registrationTxt"
-        app:layout_constraintBottom_toTopOf="@id/sexTxt"
-
-        />
+        app:layout_constraintBottom_toTopOf="@id/universityTxt"/>
 
     <TextView
-        android:id="@+id/sexTxt"
+        android:id="@+id/universityTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="32dp"
-        android:text="@string/sex_register_txt"
+        android:layout_marginTop="8dp"
+        android:text="@string/university_register_txt"
         android:textColor="#252A34"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameEdTxt"
-        app:layout_constraintEnd_toStartOf="@+id/sexSpinner"
-        app:layout_constraintBottom_toTopOf="@+id/phoneEdTxt"
+        app:layout_constraintTop_toBottomOf="@+id/secondRegistrationTxt"
+        app:layout_constraintEnd_toStartOf="@+id/universitySpinner"
+        app:layout_constraintBottom_toTopOf="@+id/registrationEdTxt"
 
         />
 
     <Spinner
-        android:id="@+id/sexSpinner"
+        android:id="@+id/universitySpinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="4dp"
-        android:entries="@array/sexOptions"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         android:scrollbarSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/sexTxt"
-        app:layout_constraintTop_toBottomOf="@+id/nameEdTxt"
-        app:layout_constraintBottom_toTopOf="@+id/phoneEdTxt"
+        app:layout_constraintStart_toEndOf="@+id/universityTxt"
+        app:layout_constraintTop_toBottomOf="@+id/secondRegistrationTxt"
+        app:layout_constraintBottom_toTopOf="@+id/registrationEdTxt"
 
         />
 
     <EditText
-        android:id="@+id/phoneEdTxt"
+        android:id="@+id/registrationEdTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="32dp"
-        android:hint="@string/phone_register_edTxt"
-        android:inputType="phone"
+        android:hint="@string/registration_number_edTxt"
+        android:inputType="number"
         android:textSize="16sp"
         android:theme="@style/TextAppearance.App.TextInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sexSpinner"
-        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
+        app:layout_constraintTop_toBottomOf="@+id/universitySpinner"
+        app:layout_constraintBottom_toTopOf="@+id/continueButton"
 
         />
 
-
     <ImageButton
-        android:id="@+id/confirmButton"
+        android:id="@+id/continueButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
@@ -101,8 +81,8 @@
         android:src="@drawable/ic_arrow_forward_black_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneEdTxt"
-        app:layout_constraintBottom_toTopOf="@+id/haveAccountTxt"
+        app:layout_constraintTop_toBottomOf="@+id/registrationEdTxt"
+        app:layout_constraintBottom_toTopOf="@+id/secondHaveAccountTxt"
         app:layout_goneMarginEnd="16dp"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
@@ -110,7 +90,7 @@
         />
 
     <TextView
-        android:id="@+id/haveAccountTxt"
+        android:id="@+id/secondHaveAccountTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="105dp"
@@ -119,13 +99,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:maxLines="1"
-        app:layout_constraintTop_toBottomOf="@+id/confirmButton"
+        app:layout_constraintTop_toBottomOf="@+id/continueButton"
         android:layout_marginTop="8dp"
 
         />
 
     <TextView
-        android:id="@+id/loginTxt"
+        android:id="@+id/secondLoginTxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -134,10 +114,9 @@
         android:textColor="#FF2E63"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/haveAccountTxt"
-        app:layout_constraintTop_toBottomOf="@+id/confirmButton"
+        app:layout_constraintStart_toEndOf="@+id/secondHaveAccountTxt"
+        app:layout_constraintTop_toBottomOf="@+id/continueButton"
 
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
