--- a/app/src/main/res/layout/item_monitor.xml
+++ b/app/src/main/res/layout/item_monitor.xml
@@ -3,10 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="128dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="32dp"
+    android:layout_marginEnd="32dp"
+    app:cardBackgroundColor="#EAEAEA"
+    app:cardCornerRadius="15dp"
+    android:clickable="true"
+    android:focusable="true"
+    >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <androidx.constraintlayout.widget.Barrier
             android:layout_width="wrap_content"
@@ -24,14 +33,16 @@
             app:constraint_referenced_ids="avatarImg"
             />
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="0dp"
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:id="@+id/avatarImg"
             android:layout_margin="12dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:civ_border_color="#FF2E63"
+            app:civ_border_width="2dp"
             android:src="@drawable/ic_girl"
             />
 
@@ -39,9 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/itemNameTxt"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:gravity="center_horizontal"
             android:maxLines="2"
             tools:text="Fernanda Braga"
             android:textSize="16sp"
