--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,251 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    android:fillViewport="true"
     tools:context=".ui.authentication.register.RegisterFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/registrationTxt"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/background">
+        android:layout_marginTop="89dp"
+        android:gravity="center_horizontal"
+        android:text="@string/make_registration_txt"
+        android:textColor="#252A34"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/nameEdTxt"/>
 
-        <TextView
-            android:id="@+id/registrationTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="89dp"
-            android:gravity="center_horizontal"
-            android:text="@string/make_registration_txt"
-            android:textColor="#252A34"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/nameEdTxt"/>
+    <EditText
+        android:id="@+id/nameEdTxt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginEnd="32dp"
+        android:hint="@string/name_register_edTxt"
+        android:textSize="16sp"
+        android:theme="@style/TextAppearance.App.TextInputLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registrationTxt"
+        app:layout_constraintBottom_toTopOf="@id/sexTxt"
 
-        <EditText
-            android:id="@+id/nameEdTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="65dp"
-            android:layout_marginEnd="32dp"
-            android:hint="@string/name_register_edTxt"
-            android:textSize="14sp"
-            android:theme="@style/TextAppearance.App.TextInputLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/registrationTxt"
-            app:layout_constraintBottom_toTopOf="@id/sexTxt"
+        />
 
-            />
+    <TextView
+        android:id="@+id/sexTxt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/sex_register_txt"
+        android:textColor="#252A34"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameEdTxt"
+        app:layout_constraintEnd_toStartOf="@+id/sexSpinner"
+        app:layout_constraintBottom_toTopOf="@+id/phoneEdTxt"
 
-        <TextView
-            android:id="@+id/sexTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:text="@string/sex_register_txt"
-            android:textColor="#252A34"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameEdTxt"
-            app:layout_constraintEnd_toStartOf="@+id/sexSpinner"
-            app:layout_constraintBottom_toTopOf="@+id/universityTxt"
+        />
 
-            />
+    <Spinner
+        android:id="@+id/sexSpinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="4dp"
+        android:entries="@array/sexOptions"
+        android:scrollbarSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/sexTxt"
+        app:layout_constraintTop_toBottomOf="@+id/nameEdTxt"
+        app:layout_constraintBottom_toTopOf="@+id/phoneEdTxt"
 
-        <Spinner
-            android:id="@+id/sexSpinner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="64dp"
-            android:layout_marginTop="4dp"
-            android:entries="@array/sexOptions"
-            android:scrollbarSize="14dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/sexTxt"
-            app:layout_constraintTop_toBottomOf="@+id/nameEdTxt"
-            app:layout_constraintBottom_toTopOf="@+id/universitySpinner"
+        />
 
-            />
+    <EditText
+        android:id="@+id/phoneEdTxt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="32dp"
+        android:hint="@string/phone_register_edTxt"
+        android:inputType="phone"
+        android:textSize="16sp"
+        android:theme="@style/TextAppearance.App.TextInputLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sexSpinner"
+        app:layout_constraintBottom_toTopOf="@+id/confirmButton"
 
-        <TextView
-            android:id="@+id/universityTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/university_register_txt"
-            android:textColor="#252A34"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sexSpinner"
-            app:layout_constraintEnd_toStartOf="@+id/universitySpinner"
-            app:layout_constraintBottom_toTopOf="@+id/registrationEdTxt"
-
-            />
-
-        <Spinner
-            android:id="@+id/universitySpinner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:scrollbarSize="14dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/universityTxt"
-            app:layout_constraintTop_toBottomOf="@+id/sexSpinner"
-            app:layout_constraintBottom_toTopOf="@+id/registrationEdTxt"
-
-            />
-
-        <EditText
-            android:id="@+id/registrationEdTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:hint="@string/registration_number_edTxt"
-            android:inputType="number"
-            android:textSize="14sp"
-            android:theme="@style/TextAppearance.App.TextInputLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/universitySpinner"
-            app:layout_constraintBottom_toTopOf="@+id/phoneEdTxt"
-
-            />
-
-        <EditText
-            android:id="@+id/phoneEdTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:hint="@string/phone_register_edTxt"
-            android:inputType="phone"
-            android:textSize="14sp"
-            android:theme="@style/TextAppearance.App.TextInputLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/registrationEdTxt"
-            app:layout_constraintBottom_toTopOf="@+id/emailRegEdTxt"
-
-            />
-
-        <EditText
-            android:id="@+id/emailRegEdTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:hint="@string/email_register_edTxt"
-            android:inputType="textEmailAddress"
-            android:textSize="14sp"
-            android:theme="@style/TextAppearance.App.TextInputLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phoneEdTxt"
-            app:layout_constraintBottom_toTopOf="@+id/passwordRegEdTxt"
-
-            />
-
-        <EditText
-            android:id="@+id/passwordRegEdTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:hint="@string/password_register_edTxt"
-            android:inputType="textPassword"
-            android:textSize="14sp"
-            android:theme="@style/TextAppearance.App.TextInputLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emailRegEdTxt"
-            app:layout_constraintBottom_toTopOf="@+id/confirmPasswordRegEdTxt"
-            app:passwordToggleEnabled="true"
-
-            />
-
-        <EditText
-            android:id="@+id/confirmPasswordRegEdTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="32dp"
-            android:hint="@string/confirm_password_register_edTxt"
-            android:inputType="textPassword"
-            android:textSize="14sp"
-            android:theme="@style/TextAppearance.App.TextInputLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordRegEdTxt"
-            app:layout_constraintBottom_toTopOf="@+id/confirmButton"
-            app:passwordToggleEnabled="true"
-
-            />
-
-        <Button
-            android:id="@+id/confirmButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="72dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="72dp"
-            android:background="@drawable/rounded_button"
-            android:text="@string/register_button"
-            android:textColor="#ffffff"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegEdTxt"
-            app:layout_constraintBottom_toTopOf="@+id/haveAccountTxt"
-            app:layout_goneMarginEnd="16dp"
-
-            />
-
-        <TextView
-            android:id="@+id/haveAccountTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="105dp"
-            android:text="@string/have_account_register_txt"
-            android:textColor="#252A34"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:maxLines="1"
-            app:layout_constraintTop_toBottomOf="@+id/confirmButton"
-            android:layout_marginTop="8dp"
-
-            />
-
-        <TextView
-            android:id="@+id/loginTxt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="4dp"
-            android:text="@string/login_register_txt"
-            android:textColor="#FF2E63"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/haveAccountTxt"
-            app:layout_constraintTop_toBottomOf="@+id/confirmButton"
-
-            />
+        />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+    <ImageButton
+        android:id="@+id/confirmButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="72dp"
+        android:background="@drawable/rounded_button"
+        android:src="@drawable/ic_arrow_forward_black_24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phoneEdTxt"
+        app:layout_constraintBottom_toTopOf="@+id/haveAccountTxt"
+        app:layout_goneMarginEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+
+        />
+
+    <TextView
+        android:id="@+id/haveAccountTxt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="105dp"
+        android:text="@string/have_account_register_txt"
+        android:textColor="#252A34"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:maxLines="1"
+        app:layout_constraintTop_toBottomOf="@+id/confirmButton"
+        android:layout_marginTop="8dp"
+
+        />
+
+    <TextView
+        android:id="@+id/loginTxt"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="4dp"
+        android:text="@string/login_register_txt"
+        android:textColor="#FF2E63"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/haveAccountTxt"
+        app:layout_constraintTop_toBottomOf="@+id/confirmButton"
+
+        />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
